Rename tailwind config extension

--- a/web-app/src/styles/globals.css
+++ b/web-app/src/styles/globals.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 @plugin "tailwindcss-animate";
 @custom-variant dark (&:is(.dark *));
-@config "../../tailwind.config.cts";
+@config "../../tailwind.config.mts";
 
 @layer base {
   * {
